src/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* by default the markers are positioned outside of the content flow of the list item due to universal no margin and no padding. So, I'm making the ul and ol visible by positioning it to inside just in case if the dots are needed in the future. */

ul,
ol {
  list-style-position: inside;
}

body,
html {
  height: 100vh;
  overflow-x: hidden;
}

:root {
  font-family: "Inter", sans-serif;
  --black: #222222;
  --white: #fafafa;
  --green-100: #a0d4d6;
  --green-200: #55b2c0;
  --green-300: #3d94a3;
  --green-500: #1a8699;
  --green-600: #0a5b69;
  --green-700: #064550;
  --grey-100: #eeeeee;
  --grey-300: #acacac;
}

:root,
[data-theme="light"] {
  color-scheme: light;
  --color-primary-bg: var(--white);
  --color-primary-text: var(--black);
  --color-x-icon: var(--black);
  --color-remove-icon: var(--black);
  --color-side-bg: var(--green-100);
  --color-logout-bg: var(--green-100);
  --color-brand-text: var(--black);
  --color-link-text: var(--black);
  --color-site-header: var(--white);
  --color-icon-bg: var(--green-100);
  --color-icon: var(--black);
  --color-icon-text: var(--black);
  --color-category-text: var(--white);
  --color-category-icon-bg: var(--green-300);
  --color-category-bg: var(--green-100);
  --color-shadow-box: var(--green-700);
  --color-round-icon-bg: var(--black);
  --color-round-icon-img: var(--white);
  --color-glass-border: var(--green-200);
  --color-category-h1-bg: var(--green-600);
  --color-category-h1-text: var(--white);
  --color-progress-bar-bg: var(--grey-100);
  --color-progress-bar: var(--green-300);
  --color-progress-bar-text: var(--white);
  --color-utils-btn-bg: var(--green-500);
  --color-utils-btn-text: var(--white);
  --color-delete-btn-bg: var(--green-300);
  --color-save-btn-bg: var(--green-300);
  --color-save-btn-bg-hover: var(--black);
  --color-save-btn-text: var(--white);
  --color-cancel-btn-bg: var(--black);
  --color-cancel-btn-text: var(--white);
  --color-category-modal: var(--white);
  --color-modal-backdrop: var(--black);
  --color-category-icon-modal-bg: var(--green-100);
  --color-input-border: var(--grey-300);
  --color-input-bg: white;
  --color-footer-text: var(--white);
  --color-footer-bg: var(--green-600);
  --color-category-icon-border: var(--green-700);
  --color-sidebar-border: var(--green-200);
  --color-sidebar-link-border: var(--green-200);
  --color-link-hover: var(--green-300);
  --color-logout-bg-hover: var(--black);
  --color-logout-text-hover: var(--white);
  --color-slide-btn-bg: var(--green-300);
  --color-slide-btn-arrow: var(--white);
  --color-dark-green-hover: var(--green-600);
}

[data-theme="dark"] {
  color-scheme: dark;
  --color-primary-bg: var(--black);
  --color-primary-text: var(--white);
  --color-x-icon: var(--white);
  --color-remove-icon: var(--black);
  --color-side-bg: var(--green-100);
  --color-logout-bg: var(--green-100);
  --color-brand-text: var(--white);
  --color-link-text: var(--white);
  --color-site-header: var(--black);
  --color-icon-bg: var(--green-100);
  --color-icon: var(--white);
  --color-icon-text: var(--black);
  --color-category-text: var(--white);
  --color-category-icon-bg: var(--green-300);
  --color-category-bg: var(--green-100);
  --color-shadow-box: var(--green-700);
  --color-round-icon-bg: var(--black);
  --color-round-icon-img: var(--white);
  --color-glass-border: var(--green-200);
  --color-category-h1-bg: var(--green-600);
  --color-category-h1-text: var(--white);
  --color-progress-bar-bg: var(--grey-100);
  --color-progress-bar: var(--green-300);
  --color-progress-bar-text: var(--white);
  --color-utils-btn-bg: var(--green-500);
  --color-utils-btn-text: var(--white);
  --color-delete-btn-bg: var(--green-300);
  --color-save-btn-bg: var(--green-300);
  --color-save-btn-bg-hover: var(--black);
  --color-save-btn-text: var(--white);
  --color-cancel-btn-bg: var(--black);
  --color-cancel-btn-text: var(--white);
  --color-category-modal: var(--white);
  --color-modal-backdrop: var(--black);
  --color-category-icon-modal-bg: var(--green-100);
  --color-input-border: var(--grey-300);
  --color-input-bg: white;
  --color-footer-text: var(--white);
  --color-footer-bg: var(--green-600);
  --color-category-icon-border: var(--green-700);
  --color-sidebar-border: var(--green-200);
  --color-sidebar-link-border: var(--green-200);
  --color-link-hover: var(--green-300);
  --color-logout-bg-hover: var(--black);
  --color-logout-text-hover: var(--white);
  --color-slide-btn-bg: var(--green-300);
  --color-slide-btn-arrow: var(--white);
  --color-dark-green-hover: var(--green-600);
}

/*changes the google material icons styles*/
.material-symbols-outlined {
  border: none;
  padding: 0.5rem;
  font-size: 2.5rem;
  font-variation-settings:
    "FILL" 1,
    "wght" 500,
    "GRAD" 0,
    "opsz" 48;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;
  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;
  /* Support for IE. */
  font-feature-settings: "liga";
}

.hidden {
  display: none;
}

/*to remove the dot in the list*/
.sidebar > ul > li,
.nav-list-top,
.category-icon,
.modal-icon {
  list-style-type: none;
}

/*for the side nav-side-container and the right main-container*/
.site-wrapper {
  display: grid;
  grid-template-columns: auto 1fr;
  height: 100vh;
}

/*sidebar menu*/

.x-icon {
  position: fixed;
  top: 0;
  right: 0;
  background-color: transparent;
  color: var(--color-x-icon);
}

.logo {
  width: 100%;
  max-width: 100px;
  border-radius: 50%;
  margin: 2rem 0;
}

.sidebar {
  z-index: 1000;
  position: fixed;
  text-align: center;
  width: 100%;
  height: 100%;
  background-color: var(--color-side-bg);
}

.menu-link {
  padding: 1.5rem 0;
  width: 100%;
  display: block;
  text-decoration: none;
  color: var(--color-link-text);
}
/* ... */

